; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditd/extr_auditd.c_close_misc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditd/extr_auditd.c_close_misc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AUDITD_PIDFILE = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"Couldn't remove %s: %m\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"Error closing trigger messaging mechanism\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @close_misc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @close_misc() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @auditd_close_dirs()
  %3 = load i32, i32* @AUDITD_PIDFILE, align 4
  %4 = call i32 @unlink(i32 %3)
  %5 = icmp eq i32 %4, -1
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load i64, i64* @errno, align 8
  %8 = load i64, i64* @ENOENT, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = load i32, i32* @AUDITD_PIDFILE, align 4
  %12 = call i32 (i8*, ...) @auditd_log_err(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32 1, i32* %1, align 4
  br label %20

13:                                               ; preds = %6, %0
  %14 = call i32 (...) @endac()
  %15 = call i64 (...) @auditd_close_trigger()
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = call i32 (i8*, ...) @auditd_log_err(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %20

19:                                               ; preds = %13
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %17, %10
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @auditd_close_dirs(...) #1

declare dso_local i32 @unlink(i32) #1

declare dso_local i32 @auditd_log_err(i8*, ...) #1

declare dso_local i32 @endac(...) #1

declare dso_local i64 @auditd_close_trigger(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
